--- a/multimodality_analysis.ipynb
+++ b/multimodality_analysis.ipynb
@@ -8,13 +8,26 @@
     "## Predicting a continuous action when multiple correct actions exist\n",
     "\n",
     "This notebook explores different approaches to handling multimodality in robotics.\n",
-    "\n",
-    "This notebook is an addition to the following video: \n",
-    "\n",
-    "Please watch the video to understand the context.\n",
-    "\n",
+    "It is an addition to the video below. Please watch the video to understand the context."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo(\"6oZe_tKE3YA\", width=640, height=360)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Github repo: https://github.com/IliaLarchenko/robotics_multimodality_explained\n",
-    "Kaggle notebook:"
+    "\n",
+    "Kaggle notebook: https://www.kaggle.com/code/ilialar/multimodality-explained"
    ]
   },
   {
